re PR target/17836 (ABI breakage for 16-byte vectors (non-Altivec ABI & ISA))

PR target/17836
        * config/rs6000/rs6000.c (rs6000_return_in_memory): Return
        synthetic vectors in memory.
        (function_arg_boundary): Align large synthetic vectors.
        (rs6000_pass_by_reference): Pass synthetic vectors in memory.

From-SVN: r90995